# HotelCostAI

./: .replit  app.py  excel_analyzer.py  improved_recipe_extractor.py  pyproject.toml  test_app.py
.streamlit/: config.toml
attached_assets/: ABGN Item Receipt by Group 2024-2025.xlsx  ABGN One Line Store for Feb'25.xlsx  ABGN Sale by Items Feb-2025.xlsx  ABGN-A La Carte Menu Cost ( Updating )24,25.xlsx
data/: recipes.json
data/uploaded/: Asian Set Menu Repice for Myan;Voyage (12~14.03.25).xlsx
models/: inventory.py  recipe.py  sales.py
pages/: 01_Recipe_Management.py  02_Inventory_Management.py  03_Sales_Analysis.py  04_Reports_and_Insights.py  05_Data_Extraction.py  06_Recipe_Review.py  07_Receipt_Cost_Update.py
utils/: abgn_extractor.py  data_processing.py  excel_extraction.py  excel_extraction.py.bak  forecasting.py  openai_utils.py  price_updater.py  receipt_processor.py
